# Module

subdir('AnimationEngine')
subdir('DreamSoundSystem')
subdir('InteractionEngine')
subdir('PhysicsEngine')
subdir('TimeManager')

sources = [
	'DreamModule.h',
	'DreamModule.cpp',
	'DreamModuleManager.h',
	'DreamModuleManager.cpp',
	'DreamObjectModule.h',
	'DreamObjectModule.cpp'
]

module = static_library('module', sources)

