# Pipeline

sources = [
	'DConnection.h',
	'DConnection.cpp',
	'DNode.h',
	'DNode.cpp',
	'Pipeline.h',
	'Pipeline.cpp',
	'PipelineCommon.h',
	'PipelineCommon.cpp',
	'ProgramNode.h',
	'ProgramNode.cpp',
	'SinkNode.h',
	'SinkNode.cpp',
	'SourceNode.h',
	'SourceNode.cpp'
]

pipeline = static_library('pipeline', sources)