# Sandbox

subdir('win64')
subdir('osx')

sources = [
	'CommandLineManager.h',
	'CommandLineManager.cpp',
	'CredentialManager.h',
	'NamedPipeClient.h',
	'NamedPipeClient.cpp',
	'NamedPipeServer.h',
	'NamedPipeServer.cpp',
	'PathManager.h',
	'PathManager.cpp',
	'PathManagerFactory.h',
	'PathManagerFactory.cpp',
	'Sandbox.h',
	'Sandbox.cpp',
	'SandboxFactory.h',
	'SandboxFactory.cpp'
]

sandbox = static_library('sandbox', sources)