# Scene 

sources = [
	'CameraNode.h',
	'CameraNode.cpp',
	'ObjectStore.h',
	'ObjectStore.cpp',
	'ObjectStoreFactory.h',
	'ObjectStoreFactory.cpp',
	'ObjectStoreImp.h',
	'ObjectStoreImpList.h',
	'ObjectStoreImpList.cpp',
	'ObjectStoreNode.h',
	'ObjectStoreNode.cpp'
]

scene = static_library('scene', sources)